infrastructure/platform/cicd/nexus/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payu-nexus
  namespace: payu-nexus
  labels:
    app.kubernetes.io/name: nexus
    app.kubernetes.io/part-of: payu
spec:
  type: ClusterIP
  selector:
    app: nxrm
    release: payu-nexus
  ports:
    - port: 8081
      targetPort: 8081
      name: http
