infrastructure/platform/cicd/nexus/nexus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: payu-nexus
  namespace: payu-nexus
  labels:
    app.kubernetes.io/name: nexus
    app.kubernetes.io/part-of: payu
spec:
  host: nexus.apps.payu.ocp.fajjjar.my.id
  to:
    kind: Service
    name: payu-nexus
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
